# multimodal_rag_pdf

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
deploy/: nginx.conf  pdf-rag.service  setup_ec2.sh
frontend/: app.py
scripts/: test_chunking.py  test_indexing.py  test_parser.py  test_rag.py
src/: __init__.py  config.py
src/api/: main.py  models.py  registry.py
src/api/routes/: documents.py  ingest.py  query.py
src/embeddings/: __init__.py  bedrock_embeddings.py
src/generation/: __init__.py  image_describer.py  rag_pipeline.py  response_generator.py
src/ingestion/: __init__.py  indexing_pipeline.py  metadata.py  pdf_parser.py
src/ingestion/chunking/: __init__.py  base.py  hierarchical.py  semantic.py
src/retrieval/: __init__.py  retriever.py
src/vectordb/: __init__.py  chroma_client.py
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  api.ts  index.css  types.ts
web/src/components/: ChatArea.tsx  Sidebar.tsx
